# coursework3

./: README.md  functions.py  main.py  pyproject.toml
tests/: test_functions.py
